update game data and fix font-size on mobile(iOS) Safari

--- a/webroot/styles/main.css
+++ b/webroot/styles/main.css
@@ -2,6 +2,17 @@
 	box-sizing: border-box;
 }
 
+html {
+	font-size: 16px;
+}
+
+@media screen and (max-device-width: 940px){
+	/* fix for mobile safari */
+	body {
+		-webkit-text-size-adjust: 100%;
+	}
+}
+
 body {
 	--text-color: black;
 	--link-color: #08c;
